@@ -1056,6 +1056,8 @@ int main (int argc, char **argv)
 
       opencl_info_compact (hashcat_ctx);
 
+      user_options_info (hashcat_ctx);
+
       rc_final = hashcat_session_execute (hashcat_ctx);
     }
   }
